fixed dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ a {
   }
 
   body {
-    color: white;
+    color: grey;
     background: black;
   }
 }
